@@ -1,6 +1,8 @@
 Version 8.12 (Unreleased)
 -------------------------
 
+- Fix bug where some users would incorrectly not receive workflow notifications for projects they were subscribed to.
+
 SDKs
 ~~~~
 
